Feat: navigation dependency 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
 
     // splash
     implementation 'androidx.core:core-splashscreen:1.0.1'
+
+    // navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
 }
