--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Coco"
         tools:targetApi="31">
         <activity
-            android:name=".IntroActivity"
+            android:name=".view.IntroActivity"
             android:exported="true"
             android:theme="@style/Theme.Coco.Splash">
             <intent-filter>
