--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.Coco"
         tools:targetApi="31">
         <activity
-            android:name=".view.IntroActivity"
+            android:name=".view.SelectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.intro.IntroActivity"
             android:exported="true"
             android:theme="@style/Theme.Coco.Splash">
             <intent-filter>
@@ -24,8 +27,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
