Feat: ROOM, livedata dependency 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -68,4 +69,15 @@ dependencies {
 
     // Lottie
     implementation "com.airbnb.android:lottie:3.4.0"
+
+    // ROOM
+    implementation("androidx.room:room-runtime:2.5.2")
+    annotationProcessor("androidx.room:room-compiler:2.5.2")
+
+    kapt("androidx.room:room-compiler:2.5.2")
+
+    implementation("androidx.room:room-ktx:2.5.2")
+
+    //liveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
 }
