--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
 
     //liveData
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
+
+    // Coroutine WorkManager
+    implementation("androidx.work:work-runtime-ktx:2.8.1")
 }
